@startuml

title __PROCESSRENTALS's Class Diagram__\n


      abstract class ProcessRentals.ProcessRental {
          + process()
          {abstract} ~ end()
          {abstract} ~ execute()
      }

  


      class ProcessRentals.RentingDVD {
          ~ end()
          ~ execute()
      }

  


      class ProcessRentals.ReturningDVD {
          ~ end()
          ~ execute()
      }

  

  ProcessRentals.RentingDVD -up-|> ProcessRentals.ProcessRental
  ProcessRentals.ReturningDVD -up-|> ProcessRentals.ProcessRental


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
